fix: prevent contact form overflow on mobile (see pressbooks/pressbooks#2963)

--- a/assets/styles/components/_forms.scss
+++ b/assets/styles/components/_forms.scss
@@ -36,7 +36,8 @@ input[type="submit"] {
 }
 
 .form {
-  width: rem(354);
+  max-width: rem(354);
+  width: calc(100% - 2rem);
 
   ::placeholder {
     color: var(--black);
